# AES67_macos_Driver

./: .gitignore  BUILD.md  BUILD_2_SUMMARY.md  BUILD_4_SUMMARY.md  BUILD_PROGRESS.md  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  CODEBASE_REVIEW.md  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_VERIFICATION.md  LICENSE  Makefile  NEXT_STEPS.md  OPTIMIZATION_REPORT.md  PHASE1_COMPLETE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  README_OLD_Build10.md  check_devices.swift
Docs/Examples/: riedel_artist_8ch.sdp
Driver/: AES67Device.cpp  AES67Device.h  AES67IOHandler.cpp  AES67IOHandler.h  DebugLog.h  Info.plist.in  PlugInMain.cpp  SDPParser.cpp  SDPParser.h
Examples/: CMakeLists.txt  CTestTestfile.cmake  ChannelMapperDemo  ChannelMapperDemo.cpp  Makefile  SimpleSDPParse  SimpleSDPParse.cpp
Installer/: .gitignore  Distribution.xml  README.md  build-installer.sh  conclusion.html  license.txt  readme.html  uninstall.sh  welcome.html
Installer/scripts/: postinstall  preinstall
ManagerApp/: AES67ManagerApp.swift  Package.swift  build.sh
ManagerApp/Models/: DriverManager.swift  MenuBarManager.swift  StreamInfo.swift
ManagerApp/Resources/: Info.plist
ManagerApp/Views/: AddStreamView.swift  ChannelMapDiagnosticView.swift  ChannelMappingView.swift  ContentView.swift  SettingsView.swift  StreamDetailView.swift  StreamListView.swift
NetworkEngine/: DoPDecoder.cpp  DoPDecoder.h  StreamChannelMapper.cpp  StreamChannelMapper.h  StreamConfig.cpp  StreamConfig.h  StreamManager.cpp  StreamManager.h
NetworkEngine/Discovery/: RTSPClient.cpp  RTSPClient.h  SAPListener.cpp  SAPListener.h
NetworkEngine/PTP/: PTPClock.cpp  PTPClock.h
NetworkEngine/RTP/: RTPReceiver.cpp  RTPReceiver.h  RTPTransmitter.cpp  RTPTransmitter.h  SimpleRTP.cpp  SimpleRTP.h
Shared/: Config.cpp  Config.hpp  RingBuffer.hpp  Types.cpp  Types.h
Testing/Temporary/: CTestCostData.txt
Tests/: BenchmarkIOHandler  BenchmarkIOHandler.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  TestChannelMapper  TestChannelMapper.cpp  TestMultiStream  TestMultiStream.cpp  TestPTPClock  TestPTPClock.cpp  TestRTPReceiver  TestRTPReceiver.cpp  TestRTPTransmitter  TestRTPTransmitter.cpp  TestRingBuffer  TestRingBuffer.cpp  TestSDPParser  TestSDPParser.cpp  TestStreamManager  TestStreamManager.cpp
Tests/Testing/Temporary/: CTestCostData.txt
